welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		if (n<=19 && n>=13) {
                ^countTeen:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		return false;
                ^