welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	def estAdo(n:Int):Boolean {
		if (n<=19 && n>=13) {
			return true;
		}
		return false;
	}
	var p=0;
	if (estAdo(a)) {
		p=p+1;
	}
	if (estAdo(b)) {
		p=p+1;
	}
	if (estAdo(c)) {
		p=p+1;
	}
	if (estAdo(d)) {
		p=p+1;
	}
	return p;
}
